--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<!--========= header section ========-->
+
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="images/my-logo.png" alt="my-logo">
+                </div>
+                    <ul class="menu-ul">
+                        <li class="menu-list"><a href="#">About Me</a></li>
+                        <li class="menu-list"><a href="#">Projects</a></li>
+                        <li class="menu-list"><a href="#">Contact</a></li>
+                    </ul>
+                    <a href="#" class="button">Say Hi!</a>
+            </nav>
+        </div>
+    </header>
+
+<!--========= /header section ========-->
+
 </body>
 </html>
