--- a/index.html
+++ b/index.html
@@ -21,12 +21,55 @@
                         <li class="menu-list"><a href="#">Projects</a></li>
                         <li class="menu-list"><a href="#">Contact</a></li>
                     </ul>
-                    <a href="#" class="button">Say Hi!</a>
+                    <a href="https://www.facebook.com/sharif.mahmud.825/" class="button" target="_blank">Say Hi!</a>
             </nav>
         </div>
     </header>
 
 <!--========= /header section ========-->
+
+<!-- =========hero section========== -->
+
+    <section class="hero">
+        <div class="container">
+            <div class="flexible-container">
+                <div class="text halfwidth">
+                    <h2>Hello!  I am</h2>
+                    <h1><span class="text-design">Sharif Mahmud</span></h1>
+                    <h3>A professional Junior front-end developer</h3>
+                    <p>An enthusiast learner and your business mate  with an <br> experience of working on several front-end related projects </p>
+                    <a href="#" ><button class="cta">HIRE ME</button></a>
+                </div>
+                <div class="image halfwidth">
+                    <img src="images/myself.jpg" alt="myself">
+                </div>
+            </div>
+        </div>
+
+    </section>
+<!-- =========/hero section========== -->
+
+<!-- =========About me section========== -->
+
+    <section class="aboutMe">
+        <div class="container">
+           <div class="flexible-container">
+            <div class="imgTwo">
+                <img src="images/myself2-2.png" alt="myself2">
+            </div>
+            <div class="txtTwo">
+                <h1><span class="text-design"> About Myself</span></h1>
+                <div class="line"></div>
+                <p>Myself Sharif Mahmud. I am an undergraduate student in Bangabandhu Sheikh Mujibur Rahman Science technology University. With a passion of desinging I started working as a freelance graphic designer and learning new things day by day. Now I am learning new things like web development and its related technologies. I know basic HTML & CSS and I have made already 2 small projects.</p>
+                <a href="#" ><button class="cta">DOWNLOAD RESUME</button></a>
+
+            </div>
+           </div>
+
+        </div>
+
+    </section>
+<!-- =========/About me section========== -->
 
 </body>
 </html>
