--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
                 <div class="line"></div>
                 <p>Myself Sharif Mahmud. I am an undergraduate student in Bangabandhu Sheikh Mujibur Rahman Science technology University. With a passion of desinging I started working as a freelance graphic designer and learning new things day by day. Now I am learning new things like web development and its related technologies. I know basic HTML & CSS and I have made already 2 small projects.</p>
                 <a href="#" ><button class="cta">DOWNLOAD RESUME</button></a>
-
             </div>
            </div>
-
         </div>
 
     </section>
 <!-- =========/About me section========== -->
+<!-- =========expertise section========== -->
+
+    
+<!-- =========/expertise section========== -->
 
 </body>
 </html>
