expertise section added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,39 @@
     </section>
 <!-- =========/About me section========== -->
 <!-- =========expertise section========== -->
+    <section class="expertise">
+        <div class="container">
+            <h1 id="expert"><span class="text-design" >Expertise In</span></h1>
+            <div class="line" id="expert-line"></div>
+            <div class="flexible-container">
+                <div class="text-section">
+                    
+                    <h2 class="small-p"><span class="lang">20+</span> Small Projects</h2>
+                    <p>I have done several small projects only with HTML & CSS</p>
+                    <h2 class="medium-p"> <span class="lang">10+</span> Medium Projects</h2>
+                    <p>I have done several small projects only with HTML , CSS & Bootsrap</p>
+                    <h2 class="large-p"><span class="lang">5+</span> Large Projects</h2>
+                    <p>I have done several small projects only with HTML , CSS & Bootsrap along with JavaScript</p>
+                </div>
+                <div class="progress-section">
+                    <h2 class="lang">Languages I know</h2>
+                    <h3>HTML</h3>
+                    <div class="progress">   
+                        <div class="progress-fill" id="html"></div>
+                    </div>
+                    <h3>CSS</h3>
+                    <div class="progress">   
+                        <div class="progress-fill" id="css"></div>
+                    </div>
+                    <h3>JavaScript</h3>
+                    <div class="progress">   
+                        <div class="progress-fill" id="js"></div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </section>
     
 <!-- =========/expertise section========== -->
 
