contact section added

--- a/index.html
+++ b/index.html
@@ -105,5 +105,39 @@
     
 <!-- =========/expertise section========== -->
 
+<!-- =========Contact section========== -->
+
+    <section class="contact">
+        <div class="container">
+            <h1 id="getInTouch"><span class="text-design" >Get In Touch</span></h1>
+            <div class="line" id="expert-line"></div>
+            <div class="contact-box">
+                <div class="flexible-container">
+                    <div class="adress">
+                       <div class="address-text">
+                        <h3>Phone:</h3>
+                        <p>+880 1860 792825</p>
+                        <h3>Email</h3>
+                        <p>sharifmahmud825@gmail.com</p>
+                        <h3>Address</h3>
+                        <p>9, Hazi Ismail link road Siddiquia Moholla Sonadanga, Khulna</p>
+                       </div>
+                    </div>
+                    <div class="form">
+                        <form action="#">
+                            <input type="text" placeholder="Name" class="input-item"><br>
+                            <input type="email" placeholder="Email" class="input-item"><br>
+                            <input type="text" placeholder="Phone Number" class="input-item"><br>
+                            <input type="textarea" placeholder="Message" class="input-item"><br>
+                            <a href="#" ><button class="cta" id="contact-buton">SEND</button></a>
+
+                        </form>
+                    </div>
+            </div>
+            </div>
+        </div>
+    </section>
+<!-- =========/Contact section========== -->
+
 </body>
 </html>
